[minor] add java 8 support, jar caching and args for jshell
also split of tag vs release for publishing.