@@ -39,7 +39,7 @@ class DependencyUtil {
 			return "";
 		}
 
-		var depsHash = String.join(CP_SEPARATOR, depIds);
+		String depsHash = String.join(CP_SEPARATOR, depIds);
 		Map<String, String> cache = Collections.emptyMap();
 		// Use cached classpath from previous run if present if
 		// TODO: does not handle spaces in ~/.m2 folder.
@@ -47,7 +47,7 @@ class DependencyUtil {
 			try {
 
 				cache = Files.readAllLines(DEP_LOOKUP_CACHE_FILE.toPath()).stream()
-						.filter(it -> !it.isBlank())
+						.filter(it -> !it.trim().isEmpty())
 						.collect(Collectors.toMap(
 								it -> it.split(" ")[0],
 								it -> it.split(" ")[1],
@@ -60,7 +60,7 @@ class DependencyUtil {
 			}
 
 			if (cache.containsKey(depsHash)) {
-				var cachedCP = cache.get(depsHash);
+				String cachedCP = cache.get(depsHash);
 
 				// Make sure that local dependencies have not been wiped since resolving them
 				// (like by deleting .m2)
@@ -78,8 +78,8 @@ class DependencyUtil {
 		}
 
 		try {
-			var artifacts = resolveDependenciesViaAether(depIds, customRepos, loggingEnabled);
-			var classPath = artifacts.stream().map(it -> it.getFile().getAbsolutePath())
+			List<Artifact> artifacts = resolveDependenciesViaAether(depIds, customRepos, loggingEnabled);
+			String classPath = artifacts.stream().map(it -> it.getFile().getAbsolutePath())
 					.collect(Collectors.joining(CP_SEPARATOR));
 
 			if (loggingEnabled) {
@@ -112,9 +112,9 @@ class DependencyUtil {
 
 	public List<Artifact> resolveDependenciesViaAether(List<String> depIds, List<MavenRepo> customRepos,
 			boolean loggingEnabled) {
-		var jcenter = new RemoteRepository("jcenter", "default", "https://jcenter.bintray.com/");
+		RemoteRepository jcenter = new RemoteRepository("jcenter", "default", "https://jcenter.bintray.com/");
 		List<RemoteRepository> remoteRepos = customRepos.stream().map(mavenRepo -> {
-			var rr = new RemoteRepository(mavenRepo.getId(), "default", mavenRepo.getUrl());
+			RemoteRepository rr = new RemoteRepository(mavenRepo.getId(), "default", mavenRepo.getUrl());
 			if (mavenRepo.getUser() != null && mavenRepo.getPassword() != null) {
 				rr.setAuthentication(
 						new Authentication(decodeEnv(mavenRepo.getUser()), decodeEnv(mavenRepo.getPassword())));
@@ -124,7 +124,7 @@ class DependencyUtil {
 
 		remoteRepos.add(jcenter);
 
-		var aether = new Aether(remoteRepos, Settings.getLocalMavenRepo());
+		Aether aether = new Aether(remoteRepos, Settings.getLocalMavenRepo());
 		return depIds.stream().flatMap(it -> {
 			if (loggingEnabled)
 				System.err.print(String.format("[jbang]     Resolving %s...", it));
@@ -145,8 +145,8 @@ class DependencyUtil {
 
 	public String decodeEnv(String value) {
 		if (value.startsWith("{{") && value.endsWith("}}")) {
-			var envKey = value.substring(2, value.length() - 2);
-			var envValue = System.getenv(envKey);
+			String envKey = value.substring(2, value.length() - 2);
+			String envValue = System.getenv(envKey);
 			if (null == envValue) {
 				throw new IllegalStateException(String.format(
 						"Could not resolve environment variable {{%s}} in maven repository credentials", envKey));
@@ -170,11 +170,11 @@ class DependencyUtil {
 					depId));
 		}
 
-		var groupId = gav.group("groupid");
-		var artifactId = gav.group("artifactid");
-		var version = formatVersion(gav.group("version"));
-		var classifier = gav.group("classifier");
-		var type = Optional.ofNullable(gav.group("type")).orElse("jar");
+		String groupId = gav.group("groupid");
+		String artifactId = gav.group("artifactid");
+		String version = formatVersion(gav.group("version"));
+		String classifier = gav.group("classifier");
+		String type = Optional.ofNullable(gav.group("type")).orElse("jar");
 
 		return new DefaultArtifact(groupId, artifactId, classifier, type, version);
 	}
